Fix code underlay spacing (to align with syntax highlighter)

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -10,6 +10,8 @@ $font-size-large: 16px;
 $font-size-xlarge: 24px;
 $font-size-xxlarge: 32px;
 
+$font-size-syntax-highlighter: 13px;
+
 body {
   color: $text-color;
   font-size: $font-size-normal;
