--- a/src/styles/components/_code.scss
+++ b/src/styles/components/_code.scss
@@ -35,7 +35,7 @@
     width: 800px;
     z-index: 0;
     position: absolute;
-    font-size: $font-size-normal;
+    // font-size: $font-size-normal;
   }
 
   // Emulating the CSS code generated by <SyntaxHighlighter/>
@@ -44,8 +44,9 @@
     z-index: 1;
     padding: 0.5em;
     position: absolute;
-    font-size: $font-size-normal;
+    font-size: $font-size-syntax-highlighter;
     overflow-x: auto;
+    border: 1px solid transparent;
 
     &--line-numbers {
       float: left;
